# BearCrime

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
ingestion/: csvhandle.py  dataingestion.ipynb  models.py  pipeline.py
